fixed footer padding issue on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -116,6 +116,7 @@ p {
 // Buttons
 .btn {
     margin-right: 4px;
+    margin-top:4px;
     margin-bottom: 4px;
     font-family: $font-primary;
     font-size: 12px;
@@ -750,6 +751,7 @@ p {
         &:focus,
         &:hover {
             border: 1px solid lighten($brand-black, 90%);
+            transform: scale(1.1);
             -webkit-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
             -moz-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
             -ms-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
@@ -982,7 +984,7 @@ p {
     -moz-box-shadow: inset 0 10px 21px -15px rgba(0,0,0,0.12);
     box-shadow: inset 0 10px 21px -15px rgba(0,0,0,0.12);
     @media screen and (max-width: $screen-sm) {
-        padding: 3em 0;
+        padding: 1em 0;
     }
     p {
         &:last-child {
@@ -991,8 +993,8 @@ p {
     }
     .fh5co-social {
         @include inline-block;
-        margin-top: 0px;
-        float: right;
+        margin-top: 2px;
+        float: left;
         text-align: left;
         @media screen and (max-width: $screen-sm) {
             float: left;
